feat(admin): implement full admin dashboard with product, orders, and user management

--- a/server/env.example
+++ b/server/env.example
@@ -16,11 +16,18 @@ RAZORPAY_KEY_SECRET=your-razorpay-secret-key
 # Email Configuration (Gmail)
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
-EMAIL_USER=your-email@gmail.com
-EMAIL_PASS=your-app-password
+EMAIL_USER=pg4009355@gmail.com
+EMAIL_PASS=hfiffidgfidhudud
+FROM_NAME=Pure Ghee Store
+FROM_EMAIL=your-email@gmail.com
 
 # Frontend URL (for CORS)
 FRONTEND_URL=http://localhost:3000
 
 # File Upload (if needed)
 MAX_FILE_SIZE=5242880
+
+# Cloudinary Configuration
+CLOUDINARY_CLOUD_NAME=your-cloudinary-cloud-name
+CLOUDINARY_API_KEY=your-cloudinary-api-key
+CLOUDINARY_API_SECRET=your-cloudinary-api-secret
