feat: integrate Razorpay payments and add invoice download functionality

--- a/server/env.example
+++ b/server/env.example
@@ -12,6 +12,7 @@ JWT_EXPIRE=7d
 # Razorpay Configuration
 RAZORPAY_KEY_ID=your-razorpay-key-id
 RAZORPAY_KEY_SECRET=your-razorpay-secret-key
+RAZORPAY_WEBHOOK_SECRET=your-razorpay-webhook-secret
 
 # Email Configuration (Gmail)
 EMAIL_HOST=smtp.gmail.com
