--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@shadcn/ui": "^0.0.4",
+    "aos": "^2.3.4",
     "axios": "^1.11.0",
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
