--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,12 @@
     "ws": "^8.18.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "@types/jest": "^29.5.12",
+    "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^9.1.3",
+    "nodemon": "^3.1.10",
+    "supertest": "^7.0.0"
   },
   "name": "server",
   "version": "1.0.0",
@@ -33,7 +38,9 @@
     "seed:shipping": "node utils/shippingRulesData.js",
     "seed:coupons": "node utils/couponData.js",
     "seed:all": "npm run seed && npm run seed:shipping && npm run seed:coupons",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cross-env NODE_ENV=test jest",
+    "test:watch": "cross-env NODE_ENV=test jest --watch",
+    "test:coverage": "cross-env NODE_ENV=test jest --coverage"
   },
   "keywords": [],
   "author": "",
